--- a/.github/workflows/watcherGuru-fb-agent.yml
+++ b/.github/workflows/watcherGuru-fb-agent.yml
@@ -1,9 +1,9 @@
-name: WatcherGuru FB Poster
+name: Telegram-MudahPrompt-FB-Autopost
 
 on:
   workflow_dispatch:
-  #schedule:
-     #- cron: "*/10 * * * *"
+  schedule:
+     - cron: "*/10 * * * *"
 
 permissions:
   contents: write
