--- a/.github/workflows/watcherGuru-fb-agent.yml
+++ b/.github/workflows/watcherGuru-fb-agent.yml
@@ -2,8 +2,8 @@ name: Telegram-MudahPrompt-FB-Autopost
 
 on:
   workflow_dispatch:
-  #schedule:
-     #- cron: "*/10 * * * *"
+  schedule:
+     - cron: "*/10 * * * *"
 
 permissions:
   contents: write
